--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -344,48 +344,42 @@ $size: 1.2em;
   }
 }
 
-.expand-nav {
+.expand_nav {
   border-radius: 4px;
   border: var(--table-node-border-color) solid 1px;
   display: flex;
   align-items: center;
   background-color: var(--bg-color);
   color: var(--text-color);
-}
 
-.expand_nav_left {
-  @extend .expand-nav;
-  &.disabled {
-    opacity: 0.5;
-  }
-}
+  .expand_nav_btn {
+    background-color: var(--popover-bg);
+    border-radius: 4px;
+    margin: 0.125em;
+    display: flex;
+    align-items: center;
 
-.expand_nav_right {
-  @extend .expand-nav;
-  &.disabled {
-    opacity: 0.5;
-  }
-}
-
-.expand_nav_btn {
-  background-color: var(--popover-bg);
-  border-radius: 4px;
-  margin: 0.125em;
-  display: flex;
-  align-items: center;
-
-  .divider {
-    height: 100%;
-    width: 1px;
-    background-color: var(--divider-color);
-  }
-
-  .icon {
-    svg {
-      width: 1.5em;
-      height: 1.5em;
+    .divider {
+      height: 1.75em;
+      width: 1px;
+      background-color: var(--divider-color);
     }
-    padding: 0.125em;
-    cursor: pointer;
+
+    .icon {
+      svg {
+        width: 1.5em;
+        height: 1.5em;
+      }
+      padding: 0.125em;
+      cursor: pointer;
+    }
+  }
+
+  &.disabled {
+    opacity: 0.5;
+
+    .icon {
+      cursor: default;
+    }
   }
 }
