--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -6,10 +6,15 @@ body {
   li {
     margin-bottom: 1rem;
     list-style: none;
+
+    > :global.stack-column {
+      gap: var(--spacing-xl);
+    }
   }
 
   :global .card {
     padding: 20px;
+    background: var(--background-base);
   }
   :global .card-title {
     font-size: 14px;
@@ -19,10 +24,12 @@ body {
       margin-right: 6px;
     }
   }
+  .response {
+    padding-bottom: var(--spacing-3xl);
+  }
   .action-buttons {
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-top: 24px;
 
     & > div {
       display: flex;
@@ -35,6 +42,29 @@ body {
       padding-top: 24px;
       border-top: 1px solid #424750;
       flex: 100%;
+    }
+  }
+
+  .prompt-card {
+    border-radius: 8px;
+    border: 1px solid var(--stroke--disable);
+    background: var(--background--03);
+  }
+
+  .ask-input {
+    form {
+      width: 100%;
+      position: relative;
+
+      textarea {
+        padding: 1rem 1.5rem;
+        min-height: 48px;
+      }
+      button {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+      }
     }
   }
 }
@@ -60,8 +90,46 @@ body {
   }
 }
 
-.prompt-card {
-  border-radius: 8px;
-  border: 1px solid var(--stroke--disable);
-  background: var(--background--02);
+.help {
+  .back{
+    cursor: pointer;
+    svg path{
+      stroke: var(--text-color--title);
+    } 
+  }
+  .links {
+    gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0; 
+    .link {
+      text-align: center;
+      list-style: none;
+      width: 31%;
+    a{
+      background: var(--background--04);
+    border-radius: 10px;
+    padding: 40px 0px;
+      display: block;
+      height: 100%;
+      color: var(--text-color--title);
+      text-decoration: none;
+      svg{
+        margin-bottom: var(--spacing-2xl);
+        width: 50%;
+        path{
+          fill: var(--text-color--title);
+        }
+      }
+      
+      :global .codicon{
+        font-size: 80px;
+        margin-bottom: var(--spacing-2xl);
+      }
+      
+      &:hover {
+        background: var(--background--blue);
+      }
+    }}
+  }
 }
