--- a/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
+++ b/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
@@ -11,7 +11,9 @@
       background: transparent !important;
 
       code {
-        background: transparent !important;
+        span{
+         background: transparent !important;
+      }
         padding: 0 !important;
         max-height: 250px;
       }
