--- a/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
+++ b/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
@@ -12,6 +12,9 @@
 
       code {
         background: transparent !important;
+        span{
+         background: transparent !important;
+      }
         padding: 0 !important;
         max-height: 250px;
       }
