--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -26,6 +26,11 @@ html {
       color: var(--text-color--paragraph, #c4cad2);
     }
   }
+  & .card-footer {
+    background-color: transparent;
+    padding: 0;
+  }
+
 }
 
 .btn {
