fix: minor issues

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -134,6 +134,7 @@
         button {
           border-color: transparent;
           background-color: var(--background--02);
+          color: var(--text-color--title);
         }
       }
 }
