--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -311,7 +311,7 @@ $size: 1.2em;
 
 .node-checkbox {
   display: flex;
-  align-items: center;
+  align-items: start;
   gap: 0.5em;
   padding: 0.125em 0.5em;
   border-radius: 0.5em;
