--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -11,7 +11,7 @@
   }
 }
 .doc-generator {
-  max-height: calc(100vh - 50px);
+  max-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
 
@@ -86,6 +86,7 @@
         }
         & :global #file-path {
           background: var(--background--02);
+          color: var(--text-color--title)
         }
       }
     }
