fix: documentations save flow

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -74,6 +74,7 @@
         }
         & :global #file-path {
           background: var(--background--02);
+          color: #fff;
         }
       }
     }
