feat: added tabs
fix: layout

fix: styling

feat: added accordion

WIP

WIP

WIP

feat: added icons

fix: styling

fix: styling

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

feat: integrated project health check

WIP

WIP

feat: added dropdown

fix: dropdown

WIP

WIP

feat: add types

WIP

WIP

WIP

WIP

fix: added accordion item

feat: added accordion logic

fix; styling

feat: added sidebar

fix: sidebar

WIP

fix: styling

fix: styling

fix: styling

WIP

fix: filter

fix: filters

WIP

feat: integrated configs

fix: accordion

feat: added config

feat: added file selection

fix: added more fields in details

fix: api

feat: added catalog check

fix: paths

--- a/webview_panels/src/main.scss
+++ b/webview_panels/src/main.scss
@@ -113,3 +113,27 @@ strong {
 code {
   color: inherit;
 }
+
+.align-items-center {
+  align-items: center;
+}
+
+.align-items-start {
+  align-items: start;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
+.text-para {
+  color: var(--text-color--paragraph);
+}
+
+.gap-0 {
+  gap: 0;
+}
