feat: added tabs
fix: layout

fix: styling

feat: added accordion

WIP

WIP

WIP

feat: added icons

fix: styling

fix: styling

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

feat: integrated project health check

WIP

WIP

feat: added dropdown

fix: dropdown

WIP

--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -110,3 +110,19 @@ strong {
 code {
   color: inherit;
 }
+
+.align-items-center {
+  align-items: center;
+}
+
+.align-items-start {
+  align-items: start;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.spacer {
+  flex-grow: 1;
+}
