fix: new tests flow

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -4,9 +4,7 @@
   }
 
   .entity-tests {
-    h5 {
-      margin-bottom: var(--spacing-lg);
-    }
+    margin-top: var(--spacing-lg);
     :global .model {
       gap: 5px;
       h5 {
