--- a/webview_panels/src/modules/defer/defer.module.scss
+++ b/webview_panels/src/modules/defer/defer.module.scss
@@ -23,4 +23,35 @@
       }
     }
   }
+
+  .path-selection {
+    padding: 16px;
+    border-radius: 10px;
+    background: var(--background--01);
+    gap: 8px;
+    margin-bottom: 20px;
+
+    .title{
+      margin-left: 10px;
+    }
+
+    .path-selection-row{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .path-input{
+      width: 70%;
+      cursor: pointer;
+    }
+  }
+}
+
+.projectSelect{
+  margin-bottom: 20px;
+  min-width: 50vw;
+  :global .altimate-select{
+    margin-top: 6px;
+  }
 }
