--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -147,10 +147,10 @@
   gap: var(--spacing-2xl);
 
   :global .card {
-    background-color: var(--background--03);
+    background-color: var(--background--base);
+    border-color: transparent;
   }
   .title {
-    background-color: var(--background--02);
     border-radius: 8px;
     justify-content: space-between;
 
@@ -166,10 +166,18 @@
   .test-list-group {
     gap: 10px;
 
-    button {
-      border-color: transparent;
+    div {
+      border-color: var(--stroke--disable);
       background-color: var(--background--02);
       color: var(--text-color--title);
+      border-radius: 8px;
+      border-top-width: 1px;
+      cursor: default;
+      caption {
+        color: var(--text-color--caption);
+        font-size: 1rem;
+        display: inline-block;
+      }
 
       &:global.disabled{
         opacity: 0.3;
@@ -185,9 +193,7 @@
   }
 
   :global .card-body {
-    background-color: var(--background--02);
-    padding: 1rem;
-    border-radius: 8px;
+    
   }
 
   :global .card-footer {
