--- a/webview_panels/src/uiCore/components/drawer/styles.module.scss
+++ b/webview_panels/src/uiCore/components/drawer/styles.module.scss
@@ -1,4 +1,7 @@
 .offcanvas{
+  :global .offcanvas-body{
+    background: var(--background--02)
+  }
   .close-btn{
     width: 40px;
     height: 40px;
