fix: defer to prod notification issues

--- a/webview_panels/src/modules/defer/defer.module.scss
+++ b/webview_panels/src/modules/defer/defer.module.scss
@@ -45,6 +45,22 @@
       width: 70%;
       cursor: pointer;
     }
+
+    .refresh-btn{
+      color: #fff;
+      margin-left: -5rem;
+      margin-top: 0.15rem;
+
+      :global .codicon{
+        font-size: 1.1rem;
+      }
+      :global .spinner-border{
+        width: 1rem;
+      height: 1rem;
+      margin-top: 0.15rem;
+      border-width: 2px;
+      }
+    }
   }
 }
 
