--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -183,6 +183,12 @@
       margin-left: 3px;
     }
   }
+  :global .spinner-border{
+    width: 1rem;
+  height: 1rem;
+  margin-top: 0.15rem;
+  border-width: 2px;
+  }
   .test-list-group {
     gap: 10px;
 
