fix: for review comments

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -146,7 +146,6 @@
       &:hover{
         background-color: transparent;
         border-color: var(--primary-color);
-        color: initial;
       }
     }
   }
@@ -172,6 +171,8 @@
   }
   .title {
     border-radius: 8px;
+    padding: 1rem;
+    background-color: var(--background--03);
     justify-content: space-between;
 
     :global .primary {
