fix: handle relationships with sources and refs and by node

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -7,6 +7,8 @@
   }
 
   .newTestTag{
+    padding: 3px 10px;
+    border-radius: 4px;
     &:hover{
       border-color: var(--primary-color);
       background-color: transparent;
