--- a/webview_panels/src/uiCore/components/iconButton/styles.module.scss
+++ b/webview_panels/src/uiCore/components/iconButton/styles.module.scss
@@ -1,5 +1,6 @@
 .iconButton {
-  padding: 6px;
+  padding: 6px 7px;
+  color: var(--text-color--title);
 
   &:global.outline {
     border-radius: 5px;
