--- a/webview_panels/src/uiCore/components/select/select.module.scss
+++ b/webview_panels/src/uiCore/components/select/select.module.scss
@@ -2,7 +2,10 @@
 .altimate-select {
   [class*="-control"]{
     border-color: transparent;
-    background-color: var(--background--01);
+    background-color: var(--background--02);
+  }
+  input {
+    caret-color: var(--text-color--title);
   }
 }
 }
