--- a/webview_panels/src/main.scss
+++ b/webview_panels/src/main.scss
@@ -27,6 +27,7 @@ body {
   --action--brand: #004fbf;
   --action-yellow: #ffce73;
   --action-red: #ee140f;
+  --action-beta: #FF754C;
   --action-brand-dark: #004fbf;
   --icon--active: #535456;
   --icon--default: #8390a3;
