fix: table markdown render

--- a/webview_panels/src/modules/markdown/markdown.module.scss
+++ b/webview_panels/src/modules/markdown/markdown.module.scss
@@ -19,6 +19,16 @@
     }
   }
 
+  table {
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    padding: 6px 13px;
+    border: 1px solid black;
+  }
+
   :global .code__icons {
     position: absolute;
     top: 6px;
